# wasm_val

./: LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
examples/canvas_animate_solar_system/: README.md  index.html
examples/canvas_animate_solar_system/rust_wasm/: Cargo.toml
examples/clock/: README.md  index.html  package.json
examples/clock/rust_wasm/: Cargo.toml
examples/create_element/: README.md  index.html  package.json
examples/create_element/rust_wasm/: Cargo.toml
examples/hello-world/: README.md  index.html  package.json
examples/hello-world/lib/: wasm_val_module.js  wasm_val_serializer.js
examples/hello-world/rust_wasm/: Cargo.toml
examples/hello_world/: index.html  package.json
examples/hello_world/rust_wasm/: Cargo.toml
examples/register_event_callback/: README.md  index.html  package.json
examples/webgl_animate_squares/: README.md  index.html
tests/: index.html  package.json
tests/lib/: test_call_fn.js  test_call_new.js  test_event_callback.js  test_exports.js  test_get_then_set.js  test_helper.js  test_lambda_return.js  test_panic_hook.js  test_set_prim_num.js  test_set_typed_array.js
wasm_val/: Cargo.toml  LICENSE  LICENSE-MIT
wasm_val/src/: js_ser.rs  lib.rs  rust_exports.rs  ser_constants.rs
wasm_val/src/js_ser/: js_ser_num.rs  js_val.rs  mod.rs  num.rs  num_slice.rs
wasm_val/src/js_val_impl/: call.rs  cast_as.rs  mod.rs  new.rs
wasm_val/src/wasm_ffi/: js_exports.rs  mod.rs
wasm_val_module/: LICENSE  LICENSE-APACHE  README.md  map_cache.js  package.json  wasm_val_module.js  wasm_val_serializer.js
(+29 files in other folders)
